Label case videos with scenic locations

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;600&family=ZCOOL+XiaoWei&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/static/styles.css?v=26" />
+    <link rel="stylesheet" href="/static/styles.css?v=27" />
   </head>
   <body>
     <div id="app" class="layout">
@@ -219,6 +219,7 @@
                   playsinline
                   src="/static/media/case-videos/case-virtual-guide.mp4"
                 ></video>
+                <p class="case-scene">场景：西安城墙景区</p>
                 <div class="case-links">
                   <span>讯飞虚拟人方案</span>
                   <span class="is-video">场景视频</span>
@@ -234,6 +235,7 @@
                   playsinline
                   src="/static/media/case-videos/case-service-robot.mp4"
                 ></video>
+                <p class="case-scene">场景：泰山景区</p>
                 <div class="case-links">
                   <span>央视报道案例</span>
                   <span class="is-video">场景视频</span>
@@ -249,6 +251,7 @@
                   playsinline
                   src="/static/media/case-videos/case-ticket-parking.mp4"
                 ></video>
+                <p class="case-scene">场景：张家界国家森林公园</p>
                 <div class="case-links">
                   <span>腾讯云智慧景区</span>
                   <span class="is-video">场景视频</span>
@@ -264,6 +267,7 @@
                   playsinline
                   src="/static/media/case-videos/case-smart-service.mp4"
                 ></video>
+                <p class="case-scene">场景：杭州西湖景区</p>
                 <div class="case-links">
                   <span>腾讯云方案</span>
                   <span class="is-video">场景视频</span>
@@ -279,6 +283,7 @@
                   playsinline
                   src="/static/media/case-videos/case-flow-analytics.mp4"
                 ></video>
+                <p class="case-scene">场景：上海迪士尼度假区</p>
                 <div class="case-links">
                   <span>腾讯云数据预测</span>
                   <span class="is-video">场景视频</span>
@@ -294,6 +299,7 @@
                   playsinline
                   src="/static/media/case-videos/case-ai-photo.mp4"
                 ></video>
+                <p class="case-scene">场景：敦煌鸣沙山月牙泉景区</p>
                 <div class="case-links">
                   <span>宇视梧桐Vlog</span>
                   <span class="is-video">场景视频</span>
@@ -309,6 +315,7 @@
                   playsinline
                   src="/static/media/case-videos/case-immersive-vr.mp4"
                 ></video>
+                <p class="case-scene">场景：广州长隆旅游度假区</p>
                 <div class="case-links">
                   <span>广东省典型案例</span>
                   <span class="is-video">场景视频</span>
